# otelma-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/otelma/: Cargo.toml
crates/otelma-cli/: Cargo.toml
crates/otelma-cli/src/: commands.rs  main.rs  summary.rs
crates/otelma-polymarket/: Cargo.toml
crates/otelma-polymarket/src/: client.rs  event.rs  gamma.rs  lib.rs  parser.rs  subscription.rs  testing.rs  types.rs
crates/otelma-replay-egui/: Cargo.toml
crates/otelma-replay-egui/src/: app.rs  demo.rs  feeder.rs  live.rs  main.rs  series.rs  state.rs  theme.rs  ui.rs
crates/otelma/src/: clock.rs  codec.rs  error.rs  lib.rs  message.rs  monotonic.rs  parts.rs  reader.rs  recorder.rs  replay.rs  test_support.rs
docs/: architecture.md  format.md  replayer.png.README
