[package]
name = "otelma-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line front door for the otelma record/replay engine (record / replay / compact)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/babush/otelma"

[[bin]]
name = "otelma"
path = "src/main.rs"

[dependencies]
otelma = { path = "../otelma" }
otelma-polymarket = { path = "../otelma-polymarket" }
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-util = "0.7"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
rust_decimal = { version = "1.42", features = ["serde-str"] }

[dev-dependencies]
tempfile = "3.27"
rust_decimal_macros = "1.40"
otelma-polymarket = { path = "../otelma-polymarket", features = ["testing"] }
