[package]
name = "otelma-polymarket"
version = "0.1.0"
edition = "2021"
description = "Batteries-included Polymarket CLOB payload + WS frame parser for the otelma record/replay engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/babush/otelma"

[features]
# Exposes the test builders in `testing.rs` to downstream crates as a
# dev-dependency, so their test suites reuse one set of PolyEvent builders.
testing = []

[dependencies]
otelma = { path = "../otelma" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `serde-str` makes Decimal serialize as a string by default, which round-trips
# losslessly through MessagePack (a numeric encoding would go via f64 and lose
# precision). See the `decimal_round_trip` test.
rust_decimal = { version = "1.42", features = ["serde-str"] }
thiserror = "2.0"
chrono = "0.4"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
rust_decimal_macros = "1.40"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
