[package]
name = "otelma-replay-egui"
version = "0.1.0"
edition = "2021"
description = "Desktop egui replayer for otelma sessions — live market plots with a timeline scrubber."
license = "MIT OR Apache-2.0"
repository = "https://github.com/babush/otelma"

[[bin]]
name = "otelma-replay-egui"
path = "src/main.rs"

[dependencies]
otelma = { path = "../otelma" }
otelma-polymarket = { path = "../otelma-polymarket" }
eframe = "0.35"
egui = "0.35"
chrono = "0.4"
rust_decimal = "1.42"
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rust_decimal_macros = "1.40"
tempfile = "3.27"
otelma-polymarket = { path = "../otelma-polymarket", features = ["testing"] }
