[package]
name = "otelma"
version = "0.1.0"
edition = "2021"
description = "Generic, deterministic record/replay library for streaming market data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/babush/otelma"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1.3"
thiserror = "2.0"
